archivos nuevos de imagen y cambios

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <!-- HEADER -->
         <div class="ficha-header">
             <h1>Ficha Personal</h1>
-            <div class="icono-luna"></div>
+            <button id="theme-toggle"> <img id="icono-tema" src="./img/luna.svg" alt="Cambiar tema">
+            </button>
         </div>
 
         <!-- PERFIL -->
@@ -44,29 +45,53 @@
         </div>
 
         <!-- PROYECTOS -->
-        <div class="repositorios-grid">
-            <div class="tarjeta-repo">
-                <img src="./img/banner4.jpg" alt="Fan Page">
-                <h3>Fan Page</h3>
-                <p><a href="#" target="_blank">Repositorio</a></p>
-                <p><a href="#" target="_blank">Documentación</a></p>
-            </div>
-
-            <div class="tarjeta-repo">
-                <img src="./img/local comercial.jpg" alt="Local Comercial">
-                <h3>Local Comercial</h3>
-                <p><a href="#" target="_blank">Repositorio</a></p>
-                <p><a href="#" target="_blank">Documentación</a></p>
-            </div>
-
-            <div class="tarjeta-repo">
-                <img src="./img/mall.jpg" alt="Centro Comercial">
-                <h3>Centro Comercial</h3>
-                <p><a href="#" target="_blank">Repositorio</a></p>
-                <p><a href="#" target="_blank">Documentación</a></p>
-            </div>
-        </div>
-    </main>
+<div class="repositorios-grid">
+    <!-- FAN PAGE -->
+    <div class="tarjeta-repo">
+        <img src="./img/banner4.jpg" alt="Fan Page">
+        <h3>Fan Page</h3>
+        <p>
+            <a href="https://tusuario.github.io/fanpage/" target="_blank">
+                Página Web
+            </a>
+        </p>
+        <p>
+            <a href="https://github.com/tusuario/fanpage" target="_blank">
+                Repositorio
+            </a>
+        </p>
+    </div>
+    <!-- LOCAL COMERCIAL -->
+    <div class="tarjeta-repo">
+        <img src="./img/local comercial.jpg" alt="Local Comercial">
+        <h3>Local Comercial</h3>
+        <p>
+            <a href="https://tusuario.github.io/localcomercial/" target="_blank">
+                Página Web
+            </a>
+        </p>
+        <p>
+            <a href="https://github.com/tusuario/localcomercial" target="_blank">
+                Repositorio
+            </a>
+        </p>
+    </div>
+    <!-- CENTRO COMERCIAL -->
+    <div class="tarjeta-repo">
+        <img src="./img/mall.jpg" alt="Centro Comercial">
+        <h3>Centro Comercial</h3>
+        <p>
+            <a href="https://tusuario.github.io/mall/" target="_blank">
+                Página Web
+            </a>
+        </p>
+        <p>
+            <a href="https://github.com/tusuario/mall" target="_blank">
+                Repositorio
+            </a>
+        </p>
+    </div>
+</div>
 
     <footer>
         <p>© 2025 Todos los derechos reservados</p>
