--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <img src="./img/banner4.jpg" alt="Fan Page">
         <h3>Fan Page</h3>
         <p>
-            <a href="https://tusuario.github.io/fanpage/" target="_blank">
+            <a href="https://mattposs.github.io/Desarrollo-DisenoWeb_NM_MPP_FanPage2/" target="_blank">
                 Página Web
             </a>
         </p>
         <p>
-            <a href="https://github.com/tusuario/fanpage" target="_blank">
+            <a href="https://github.com/mattposs/Desarrollo-DisenoWeb_NM_MPP_FanPage2" target="_blank">
                 Repositorio
             </a>
         </p>
@@ -66,12 +66,12 @@
         <img src="./img/local comercial.jpg" alt="Local Comercial">
         <h3>Local Comercial</h3>
         <p>
-            <a href="https://tusuario.github.io/localcomercial/" target="_blank">
+            <a href="https://mattposs.github.io/TPO-DesarrolloYdisenoWeb_MN_2025/" target="_blank">
                 Página Web
             </a>
         </p>
         <p>
-            <a href="https://github.com/tusuario/localcomercial" target="_blank">
+            <a href="https://github.com/mattposs/TPO-DesarrolloYdisenoWeb_MN_2025" target="_blank">
                 Repositorio
             </a>
         </p>
@@ -81,12 +81,12 @@
         <img src="./img/mall.jpg" alt="Centro Comercial">
         <h3>Centro Comercial</h3>
         <p>
-            <a href="https://tusuario.github.io/mall/" target="_blank">
+            <a href="https://jartimiak.github.io/Centro-Comercial-Grupo1-TPO-DDW/index.html" target="_blank">
                 Página Web
             </a>
         </p>
         <p>
-            <a href="https://github.com/tusuario/mall" target="_blank">
+            <a href="https://github.com/JArtimiak/Centro-Comercial-Grupo1-TPO-DDW" target="_blank">
                 Repositorio
             </a>
         </p>
