--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <!-- HEADER -->
         <div class="ficha-header">
             <h1>Ficha Personal</h1>
-            <button id="theme-toggle"> <img id="icono-tema" src="./img/luna.svg" alt="Cambiar tema">
-            </button>
+                <button id="theme-toggle">
+                    <img id="icono-tema" src="./img/luna.svg" alt="Cambiar tema">
+                </button>
         </div>
 
         <!-- PERFIL -->
