Fix HTML structure and update project links

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </a>
         </p>
         <p>
-            <a href="https://github.com/JArtimiak/Centro-Comercial-Grupo1-TPO-DDW" target="_blank">
+            <a href="https://github.com/mattposs/Ficha_Personal_Matias_Posse/blob/main/Mall%20Costa%20del%20Sol.pptx">
                 Repositorio
             </a>
         </p>
@@ -101,3 +101,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
