cambios que faltaron

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             </a>
         </p>
         <p>
-            <a href="https://github.com/mattposs/TPO-DesarrolloYdisenoWeb_MN_2025" target="_blank">
-                Repositorio
+            <a href="./doc/Trabajo Práctico Obligatorio - Diseñoy desarrollo Web.pdf" target="_blank">
+                Documentacion
             </a>
         </p>
     </div>
@@ -87,8 +87,8 @@
             </a>
         </p>
         <p>
-            <a href="https://github.com/mattposs/Ficha_Personal_Matias_Posse/blob/main/Mall%20Costa%20del%20Sol.pptx">
-                Repositorio
+            <a href="./doc/Mall Costa del Sol.pptx">
+                Documentacion
             </a>
         </p>
     </div>
